fix: navbar theme toggle and smooth scroll on mobile devices

--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -100,6 +100,6 @@ p.current-lang {
 @media (max-width: 900px) {
   .navbar-container {
     width: 100%;
-    padding: 2em;
+    padding: 2em 1em;
   }
 }
